自定义组件的使用

--- a/小程序项目day02/pages/slot2/index.wxml
+++ b/小程序项目day02/pages/slot2/index.wxml
@@ -1,1 +1,11 @@
-<MyTabs></MyTabs>
+<MyTabs titleList="{{titleList}}" binditemChange="handleItemChange" currentIndex="{{index}}">
+
+
+<view wx:if="{{index===0}}">要闻0</view>
+
+<view wx:elif="{{index===1}}">推荐1</view>
+
+<view wx:else>原创2</view>
+
+
+</MyTabs>
